kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-cost
  namespace: aws-cost
spec:
  selector:
    app: aws-cost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
