kube/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: aws-cost-gateway
    namespace: aws-cost
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - aws-cost.your-domain.com
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
      - aws-cost.your-domain.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: aws-cost-credential
        mode: SIMPLE
kind: List
metadata:
  resourceVersion: ""

---

apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: aws-cost-vs
    namespace: aws-cost
  spec:
    gateways:
    - aws-cost-gateway
    hosts:
    - aws-cost.your-domain.com
    http:
    - route:
      - destination:
          host: aws-cost.aws-cost.svc.cluster.local
          port:
            number: 80
        weight: 100
      timeout: 600s
kind: List
metadata:
  resourceVersion: ""
